<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="ponto">. </string>
    <string name="app_name">ControleKm</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="data">Data</string>
    <string name="selecione">Selecione</string>
    <string name="itinerario">Itinerário</string>
    <string name="km_inicial">Km inicial</string>
    <string name="km_final">Km final</string>
    <string name="salvar">Salvar</string>
    <string name="sair">Sair</string>
    <string name="voltar">Voltar</string>
    <string name="confirmacao_exclusao_km">Deseja realmente excluir o km?</string>
    <string name="confirmacao_exclusao_usuario">Deseja realmente excluir o usuário?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="opcoes">Opções</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="alterar">Alterar</string>
    <string name="id">Id: </string>
    <string name="listar_km">Listar Km</string>
    <string name="lista_usuario">Listar Usuário</string>
    <string name="gerar_pdf">Gerar PDF</string>
    <string name="empty">Sem eventos!</string>
    <string name="inec">Inec</string>
    <string name="particular">Particular</string>
    <string name="alternativo">Alternativo</string>
    <string name="tipo_veiculo"> Tipo de veículo:</string>
    <string name="placa">Placa</string>
    <string name="nome">Nome</string>
    <string name="qtde_cliente"> Qtde de clientes</string>
    <string name="realatorio">Relatório</string>
    <string name="listar_usuario">Usuários</string>
    <string name="primeira_data">1ª Data</string>
    <string name="segunda_data">2ª Data</string>
    <string name="gerencia">Gerência</string>
    <string name="unidade">Unidade</string>
    <string name="funcao">Função</string>
    <string name="data_inicial">Data Inicial</string>
    <string name="data_final">Data Final</string>
    <string name="campo_vazio">Campo Vazio!</string>
    <string name="texto_info_inicio">Carregando... Aguarde por favor!</string>
    <string name="texto_info_final">Finalizando...</string>
    <string name="troca_oleo">Troca de Óleo</string>
    <string name="ultima_troca_oleo">Ultima troca de óleo realizada</string>
    <string name="manutencao">Manutenção</string>
    <string name="ultima_manutencao">Ultima manutenção realizada</string>
    <string name="proxima_troca_oleo">Próxima troca de óleo</string>
    <string name="proxima_manutencao">Próxima manutenção</string>
    <string name="distancia_percorrida">Distância percorrida</string>
    <string name="mes_competencia">Mês/Competência</string>
    <string name="titulo_erro">Erro</string>
    <string name="titulo_aviso">Aviso</string>
    <string name="ok">OK</string>
    <string name="cancelar">CANCELAR</string>
    <string name="mensagem_usuario">Já existe um usuário cadastrado! Para cadastrar um novo usuário, faça exclusão do usuário existente!</string>
    <string name="aviso_relatorio">Não há quilometragem ou usuário cadastrado para gerar o relatório</string>
    <string name="erro_relatorio_data_igual">O relatório não pode ser gerado, pois as datas são iguais.</string>
    <string name="erro_relatorio_inicial_maior">A data inicial é maior que a data final.</string>
    <string name="erro_relatorio_mes_competencia">O relatório não pode ser gerado, pois necessita do mês de competência!</string>
    <string name="relatorio_gerado">Relatório Gerado!</string>
    <string name="sair_main">Você deseja sair? </string>
    <string name="lista_vazia_km">Lista vazia! Por favor cadastre um km.</string>
    <string name="lista_vazia_usuario">Lista vazia! Por favor cadastre um usuário.</string>
    <string name="deletar_km">Deletar Km</string>
    <string name="deletar_usuario">Deletar Usuário</string>
    <string name="aviso_utilitario">Por favor, para eficiência do controle de manutenção da moto, faça o cadastro de Km após toda viagem!</string>
    <string name="registrar_troca_oleo">REGISTRAR TROCA DE ÓLEO</string>
    <string name="registrar_manutencao">REGISTRAR MANUTENÇÃO</string>
    <string name="outro_voltar">VOLTAR</string>
    <string name="data_inicial_inexistente">A data inicial não existe no banco de dados!</string>
    <string name="data_final_inexitente">A data final não existe no banco de dados!</string>
    <string name="sobre">Sobre</string>
    <string name="versao_app">Versão 1.1</string>
    <string name="texto_sobre_1">O aplicativo ControleKm é uma ferramenta que facilita o controle de quilometragem e manutenção da motocicleta, constrói relatório de forma precisa de acordo com a necessidade e envia alertas de forma oportuna ao usuário. </string>
    <string name="texto_sobre_2">Encontrou um problema, quer deixar um comentário ou sugestão? Envie um e-amil para: fernando_dev@outlook.com.br. </string>
    <string name="nome_desenvolvedor">Desenvolvido por Fernando Nascimento</string>
    <string name="ano_desenvolvimento">2018</string>


    <string name="buscar">Buscar</string>
    <string name="results_found">
    Results found: <b>%s</b>
    </string>
    <string name="results_not_found">
    Results not found: <b>%s</b>
    </string>
    <string name="valor_do_km">Valor do Km</string>
    <string name="hint_moeda_real">R$ 0,00</string>

    <string-array name="meses_ano">
        <item>Selecione</item>
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>


</resources>