<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTitle"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cadastrar"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/data"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btnData"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:onClick="selecionarData"
            android:textColor="#000000"
            android:inputType="date"
            android:text="@string/selecione"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtItinerario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:hint="@string/itinerario"
            android:textColorHint="@color/colorTitle"
            android:inputType="textMultiLine"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:background="@drawable/edittext_border_radius" />

        <requestFocus />
        <EditText
            android:id="@+id/edtQtdeCliente"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:hint="@string/qtde_cliente"
            android:textColorHint="#000000"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:background="@drawable/edittext_border_radius" />

        <requestFocus />

        <EditText
            android:id="@+id/edtKmInicial"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:hint="@string/km_inicial"
            android:textColorHint="#000000"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:background="@drawable/edittext_border_radius" />

        <requestFocus />

        <EditText
            android:id="@+id/edtKmFinal"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:hint="@string/km_final"
            android:textColorHint="#000000"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:background="@drawable/edittext_border_radius"
            />
        <requestFocus/>

        <TextView
            android:id="@+id/txvKmTotal"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:background="@drawable/textview_border_radius"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnSalvarKm"
            android:layout_marginTop="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_radius"
            android:textColor="@color/colorBtnText"
            android:text="@string/salvar" />
        <Button
            android:id="@+id/btnVoltarKm"
            android:layout_marginTop="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_radius"
            android:textColor="@color/colorBtnText"
            android:text="@string/voltar"/>



    </LinearLayout>

</ScrollView>